fix styles on mobile displays - 1.3

--- a/style.css
+++ b/style.css
@@ -68,8 +68,11 @@ select {
   object-fit: fill;
   border-top-left-radius: 1rem;
   border-top-right-radius: 1rem;
+  transition: transform 0.2s;
 }
-
+.country img:hover {
+  transform: scale(1.01);
+}
 .country-info {
   color: rgba(0, 0, 0, 0.79);
   margin: 2.5rem;
@@ -234,15 +237,16 @@ footer {
 @media (max-width: 1000px) {
   .heading {
     font-size: 7rem;
-    margin-left: calc(12rem + 23%);
-    margin-top: 2rem;
+    margin-left: calc(12rem + 22.5%);
+    margin-top: 1rem;
     top: 4rem;
+    margin-bottom: 3rem;
   }
   .heading-1 {
     line-height: 2;
     font-size: 11rem;
     margin-left: 27%;
-    margin-top: 0.7rem;
+    margin-top: 0.4rem;
     top: 4rem;
   }
   .span {
@@ -259,7 +263,7 @@ footer {
   .country {
     height: auto;
     width: 50vw;
-    margin: 0;
+    /* margin: 0; */
     margin-bottom: 0;
     margin-top: 5rem;
   }
@@ -298,7 +302,7 @@ footer {
     padding-top: 30px;
     padding-bottom: 30px;
     border-radius: 4rem;
-    margin-left: 0;
+    margin-left: -2rem;
   }
   .or {
     font-size: 4rem;
@@ -320,6 +324,7 @@ footer {
     padding-top: 30px;
     padding-bottom: 30px;
     align-content: center;
+    margin-left: -2rem;
   }
   #country-select:focus-within {
     /* overflow-x: visible; */
